apps/media-stack/prowlarr/manifests/service.yaml
---
apiVersion: v1
kind: Service
metadata:
  name: prowlarr
  namespace: media-stack
spec:
  selector:
    app: prowlarr
  ports:
    - protocol: TCP
      port: 9696
      targetPort: 9696
  type: ClusterIP
