apps/media-stack/prowlarr/manifests/ingress.yaml
---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: prowlarr
  namespace: media-stack
  annotations:
    traefik.ingress.kubernetes.io/router.middlewares: media-stack-https-headers@kubernetescrd
spec:
  ingressClassName: traefik
  rules:
    - host: prowlarr.torsteinbo.net
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: prowlarr
                port:
                  number: 9696
